--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@shopify/react-native-skia": "^0.1.143",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-reanimated": "^2.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
